// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="undefined"
  bbWidth="20"
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  title="IconEmail"
  vbHeight={16}
  vbWidth={22}
>
  <RNSVGGroup
    fill={
      Array [
        0,
        0.11372549019607843,
        0.11372549019607843,
        0.10588235294117647,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    font={Object {}}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
        "fillRule",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  >
    <RNSVGPath
      d="1d7aae45398f94fa23694b6080b89032"
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      originX={0}
      originY={0}
      propList={Array []}
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. iconfacebook renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="undefined"
  bbWidth="20"
  meetOrSlice={0}
  minX={14}
  minY={10}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  title="IconFacebook"
  vbHeight={20.397258758544922}
  vbWidth={10.592460632324219}
>
  <RNSVGGroup
    fill={
      Array [
        0,
        0.11372549019607843,
        0.11372549019607843,
        0.10588235294117647,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    font={Object {}}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
        "fillRule",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  >
    <RNSVGPath
      d="ff2ae287381fd0583b3a4df9bc45c5be"
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      originX={0}
      originY={0}
      propList={Array []}
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`3. iconforwardarrow renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="12"
  bbWidth="7"
  meetOrSlice={0}
  minX={42}
  minY={12}
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 0,
      "height": 12,
      "width": 7,
    }
  }
  vbHeight={120}
  vbWidth={60}
>
  <RNSVGGroup
    fill={
      Array [
        0,
        0,
        0.4,
        0.6,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    font={Object {}}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  >
    <RNSVGPath
      d="cf23b8f47ac97eeec14ee4c65e472078"
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      originX={0}
      originY={0}
      propList={Array []}
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`4. iconstar renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="undefined"
  bbWidth="20"
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  title="IconStar"
  vbHeight={20}
  vbWidth={21}
>
  <RNSVGPath
    d="53af37f285b7e6e57da32c1366718e90"
    fill={
      Array [
        0,
        0,
        0.4,
        0.6,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`5. iconcopylink renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="15"
  bbWidth="20"
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 0,
      "height": 15,
      "width": 20,
    }
  }
  title="IconCopyLink"
  vbHeight={15}
  vbWidth={15}
>
  <RNSVGPath
    d="9caedb2f218a37cd4660f2ab42e9b771"
    fill={
      Array [
        0,
        0.4117647058823529,
        0.4117647058823529,
        0.4117647058823529,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`6. iconsavebookmark renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="16"
  bbWidth="20"
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 0,
      "height": 16,
      "width": 20,
    }
  }
  title="IconSaveBookmark"
  vbHeight={16}
  vbWidth={12}
>
  <RNSVGPath
    d="25ee7ee33953337725fa0c3787ab3241"
    fill={
      Array [
        0,
        0.4117647058823529,
        0.4117647058823529,
        0.4117647058823529,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`7. icontwitter renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="undefined"
  bbWidth="20"
  meetOrSlice={0}
  minX={-354.2}
  minY={-279.4}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  title="IconTwitter"
  vbHeight={600}
  vbWidth={750}
>
  <RNSVGPath
    d="0407fd6a3edc199eb6063d0ebd2c66ad"
    fill={
      Array [
        0,
        0,
        0.4,
        0.6,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`8. iconvideo renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="undefined"
  bbWidth="20"
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  title="IconVideo"
  vbHeight={40}
  vbWidth={68}
>
  <RNSVGRect
    fill={
      Array [
        0,
        0.11372549019607843,
        0.11372549019607843,
        0.10588235294117647,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    height="40"
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    rx="0"
    ry="0"
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    width="50"
    x="0"
    y="0"
  />
  <RNSVGPath
    d="171e0421ab3c212b8bbf45e8c85e924b"
    fill={
      Array [
        0,
        0.11372549019607843,
        0.11372549019607843,
        0.10588235294117647,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`9. iconvideo360player renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="undefined"
  bbWidth="20"
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  title="IconVideo360Player"
  vbHeight={100}
  vbWidth={108}
>
  <RNSVGPath
    d="92444cc628d352fe07031cfb7b426ccf"
    fill={
      Array [
        0,
        0,
        0.4,
        0.6,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`10. thestlogo renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="undefined"
  bbWidth="20"
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  title="TheSTLogo"
  vbHeight={20}
  vbWidth={29}
>
  <RNSVGPath
    d="0f4e958f2b4ff0e7612914c8ca56d8f6"
    fill={
      Array [
        0,
        1,
        1,
        1,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`11. thetimeslogo renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="undefined"
  bbWidth="20"
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
  title="TheTimesLogo"
  vbHeight={20}
  vbWidth={20}
>
  <RNSVGPath
    d="9d34e249e9f10c48ae181fd7ef01d8e7"
    fill={
      Array [
        0,
        1,
        1,
        1,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`12. closeicon renders 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="28"
  bbWidth="20"
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 0,
      "height": 28,
      "width": 20,
    }
  }
  title="Close Icon"
  vbHeight={28}
  vbWidth={28}
>
  <RNSVGPath
    d="e47f4fab4bd751d2d3ea1eb7a66c492a"
    fill={
      Array [
        0,
        1,
        1,
        1,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    originX={0}
    originY={0}
    propList={
      Array [
        "stroke",
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={
      Array [
        0,
        1,
        1,
        1,
        1,
      ]
    }
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;
